add similar products in detail posts and create posts

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -37,6 +37,7 @@
     <!--====== Use the minified version files listed below for better performance and remove the files listed above ======-->
     <link rel="stylesheet" href="{% static 'assets/css/vendor/plugins.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/style.min.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
 
 
 </head>
