--- a/templates/posts/shop-single.html
+++ b/templates/posts/shop-single.html
@@ -449,7 +449,7 @@
         <div class="container">
             <!-- Section Title Start -->
             <div class="section-title text-center">
-                <h2 class="title">Related Products</h2>
+                <h2 class="title">Вам понравится</h2>
                 <p>Consequat magna, massa vel suspendisse morbi aliquam faucibus <br> ligula ante ipsum ac nulla.</p>
             </div>
             <!-- Section Title End -->
@@ -458,214 +458,41 @@
             <div class="product-wrapper product-active mt-n1">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
+                        {% for post in random_posts %}
                         <div class="swiper-slide">
                             <!-- Product Item Start -->
                             <div class="product-item">
                                 <div class="image-block">
-                                    <a href="shop-single.html">
-                                        <img src="assets/images/product/prduct-13.jpg" alt="">
-                                        <img class="image-hover" src="assets/images/product/prduct-12.jpg" alt="">
+                                    <a href="{% url 'post_detail' post.id %}">
+                                        <img src="{{ post.post_image.url }}" alt="">
+                                        <img class="image-hover" src="{{ post.post_image.url }}" alt="">
                                     </a>
-                                    <div class="product-label">
-                                        <span class="new">New</span>
-                                        <span class="discount-percentage">-20%</span>
-                                    </div>
+                                    
                                     <div class="product-action">
                                         <a class="action-btn add-cart" href="shop-single.html#"><i class="icon-shopping-bag2"></i></a>
                                         <a class="action-btn wishlist " href="shop-single.html#"><i class="icon-heart"></i></a>
                                         <a class="action-btn compare" href="shop-single.html#"><i class="icon-sliders"></i></a>
-                                        <a class="action-btn quick-view" href="shop-single.html#" data-bs-toggle="modal" data-bs-target="#quickView"><i class="icon-search"></i></a>
+                                        <a class="action-btn quick-view" href="{% url 'post_detail' post.id %}" data-bs-toggle="modal" data-bs-target="#quickView"><i class="icon-search"></i></a>
                                     </div>
                                 </div>
                                 <div class="product-desc">
                                     <div class="product-features-reviews">
-                                        <a href="shop-single.html#" class="features">Studio Design</a>
+                                        <a href="shop-single.html#" class="features">{{ post.category }}</a>
 
                                         <div class="review-star">
                                             <div class="star" style="width: 80%;"></div>
                                         </div>
                                     </div>
-                                    <h4 class="product-name"><a href="shop-single.html">New Balance Arishi Sport v1 New Balance</a></h4>
+                                    <h4 class="product-name"><a href="{% url 'post_detail' post.id %}">{{ post.title }}</a></h4>
                                     <div class="product-price">
-                                        <span class="sale-price">$19.12</span>
-                                        <span class="old-price">$23.90</span>
+                                        <span class="sale-price">{{ post.price }} KGZ</span>
+                                        <!-- <span class="old-price">$23.90</span> -->
                                     </div>
                                 </div>
                             </div>
                             <!-- Product Item End -->
                         </div>
-                        <div class="swiper-slide">
-                            <!-- Product Item Start -->
-                            <div class="product-item">
-                                <div class="image-block">
-                                    <a href="shop-single.html">
-                                        <img src="assets/images/product/prduct-12.jpg" alt="">
-                                        <img class="image-hover" src="assets/images/product/prduct-07.jpg" alt="">
-                                    </a>
-                                    <div class="product-label">
-                                        <span class="new">New</span>
-                                        <span class="discount-percentage">-20%</span>
-                                    </div>
-                                    <div class="product-action">
-                                        <a class="action-btn add-cart" href="shop-single.html#"><i class="icon-shopping-bag2"></i></a>
-                                        <a class="action-btn wishlist " href="shop-single.html#"><i class="icon-heart"></i></a>
-                                        <a class="action-btn compare" href="shop-single.html#"><i class="icon-sliders"></i></a>
-                                        <a class="action-btn quick-view" href="shop-single.html#" data-bs-toggle="modal" data-bs-target="#quickView"><i class="icon-search"></i></a>
-                                    </div>
-                                </div>
-                                <div class="product-desc">
-                                    <div class="product-features-reviews">
-                                        <a href="shop-single.html#" class="features">Studio Design</a>
-
-                                        <div class="review-star">
-                                            <div class="star" style="width: 80%;"></div>
-                                        </div>
-                                    </div>
-                                    <h4 class="product-name"><a href="shop-single.html">Madden by Steve Madden Cale 6 Handsome Madden</a></h4>
-                                    <div class="product-price">
-                                        <span class="sale-price">$19.12</span>
-                                        <span class="old-price">$23.90</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Product Item End -->
-                        </div>
-                        <div class="swiper-slide">
-                            <!-- Product Item Start -->
-                            <div class="product-item">
-                                <div class="image-block">
-                                    <a href="shop-single.html">
-                                        <img src="assets/images/product/prduct-08.jpg" alt="">
-                                        <img class="image-hover" src="assets/images/product/prduct-11.jpg" alt="">
-                                    </a>
-                                    <div class="product-label">
-                                        <span class="new">New</span>
-                                    </div>
-                                    <div class="product-action">
-                                        <a class="action-btn add-cart" href="shop-single.html#"><i class="icon-shopping-bag2"></i></a>
-                                        <a class="action-btn wishlist " href="shop-single.html#"><i class="icon-heart"></i></a>
-                                        <a class="action-btn compare" href="shop-single.html#"><i class="icon-sliders"></i></a>
-                                        <a class="action-btn quick-view" href="shop-single.html#" data-bs-toggle="modal" data-bs-target="#quickView"><i class="icon-search"></i></a>
-                                    </div>
-                                </div>
-                                <div class="product-desc">
-                                    <div class="product-features-reviews">
-                                        <a href="shop-single.html#" class="features">Studio Design</a>
-
-                                        <div class="review-star">
-                                            <div class="star" style="width: 80%;"></div>
-                                        </div>
-                                    </div>
-                                    <h4 class="product-name"><a href="shop-single.html">Trans-Weight Hooded Wind and Water Resistant Shell</a></h4>
-                                    <div class="product-price">
-                                        <span class="sale-price">$19.90</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Product Item End -->
-                        </div>
-                        <div class="swiper-slide">
-                            <!-- Product Item Start -->
-                            <div class="product-item">
-                                <div class="image-block">
-                                    <a href="shop-single.html">
-                                        <img src="assets/images/product/prduct-11.jpg" alt="">
-                                        <img class="image-hover" src="assets/images/product/prduct-03.jpg" alt="">
-                                    </a>
-                                    <div class="product-label">
-                                        <span class="new">New</span>
-                                    </div>
-                                    <div class="product-action">
-                                        <a class="action-btn add-cart" href="shop-single.html#"><i class="icon-shopping-bag2"></i></a>
-                                        <a class="action-btn wishlist " href="shop-single.html#"><i class="icon-heart"></i></a>
-                                        <a class="action-btn compare" href="shop-single.html#"><i class="icon-sliders"></i></a>
-                                        <a class="action-btn quick-view" href="shop-single.html#" data-bs-toggle="modal" data-bs-target="#quickView"><i class="icon-search"></i></a>
-                                    </div>
-                                </div>
-                                <div class="product-desc">
-                                    <div class="product-features-reviews">
-                                        <a href="shop-single.html#" class="features">Studio Design</a>
-
-                                        <div class="review-star">
-                                            <div class="star" style="width: 80%;"></div>
-                                        </div>
-                                    </div>
-                                    <h4 class="product-name"><a href="shop-single.html">New Balance Fresh Foam LAZR v1 Sport Sport Running</a></h4>
-                                    <div class="product-price">
-                                        <span class="sale-price">$19.12</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Product Item End -->
-                        </div>
-                        <div class="swiper-slide">
-                            <!-- Product Item Start -->
-                            <div class="product-item">
-                                <div class="image-block">
-                                    <a href="shop-single.html">
-                                        <img src="assets/images/product/prduct-11.jpg" alt="">
-                                    </a>
-                                    <div class="product-label">
-                                        <span class="new">New</span>
-                                    </div>
-                                    <div class="product-action">
-                                        <a class="action-btn add-cart" href="shop-single.html#"><i class="icon-shopping-bag2"></i></a>
-                                        <a class="action-btn wishlist " href="shop-single.html#"><i class="icon-heart"></i></a>
-                                        <a class="action-btn compare" href="shop-single.html#"><i class="icon-sliders"></i></a>
-                                        <a class="action-btn quick-view" href="shop-single.html#" data-bs-toggle="modal" data-bs-target="#quickView"><i class="icon-search"></i></a>
-                                    </div>
-                                </div>
-                                <div class="product-desc">
-                                    <div class="product-features-reviews">
-                                        <a href="shop-single.html#" class="features">Studio Design</a>
-
-                                        <div class="review-star">
-                                            <div class="star" style="width: 80%;"></div>
-                                        </div>
-                                    </div>
-                                    <h4 class="product-name"><a href="shop-single.html">New Balance Fresh Foam Kaymin Cushioning...</a></h4>
-                                    <div class="product-price">
-                                        <span class="sale-price">$11.90</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Product Item End -->
-                        </div>
-                        <div class="swiper-slide">
-                            <!-- Product Item Start -->
-                            <div class="product-item">
-                                <div class="image-block">
-                                    <a href="shop-single.html">
-                                        <img src="assets/images/product/prduct-02.jpg" alt="">
-                                        <img class="image-hover" src="assets/images/product/prduct-01.jpg" alt="">
-                                    </a>
-                                    <div class="product-label">
-                                        <span class="new">New</span>
-                                    </div>
-                                    <div class="product-action">
-                                        <a class="action-btn add-cart" href="shop-single.html#"><i class="icon-shopping-bag2"></i></a>
-                                        <a class="action-btn wishlist " href="shop-single.html#"><i class="icon-heart"></i></a>
-                                        <a class="action-btn compare" href="shop-single.html#"><i class="icon-sliders"></i></a>
-                                        <a class="action-btn quick-view" href="shop-single.html#" data-bs-toggle="modal" data-bs-target="#quickView"><i class="icon-search"></i></a>
-                                    </div>
-                                </div>
-                                <div class="product-desc">
-                                    <div class="product-features-reviews">
-                                        <a href="shop-single.html#" class="features">Studio Design</a>
-
-                                        <div class="review-star">
-                                            <div class="star" style="width: 80%;"></div>
-                                        </div>
-                                    </div>
-                                    <h4 class="product-name"><a href="shop-single.html">Water and Wind Resistant Insulated Jacket</a></h4>
-                                    <div class="product-price">
-                                        <span class="sale-price">$18.90</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Product Item End -->
-                        </div>
-                    </div>
+                        {% endfor %}
                 </div>
                 <!-- Add Arrows -->
                 <div class="swiper-button-next"></div>
